--- a/templates/forum/notifications.html.twig
+++ b/templates/forum/notifications.html.twig
@@ -106,7 +106,7 @@
                         {% endif %}
                     </div>
                     <div class="notification-date">
-                        {{ notification.dateCreation|date('d/m/Y H:i') }}
+                        {{ notification.dateCreation|ago }}
                     </div>
                 </div>
             </div>
