--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,10 @@
     <!-- CSS Personnalisé -->
     <link rel="stylesheet" href="{{ asset('css/firmetna.css') }}">
     
+    <!-- Trix Editor -->
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.8/dist/trix.css">
+    <script type="text/javascript" src="https://unpkg.com/trix@2.0.8/dist/trix.umd.min.js"></script>
+    
     <!-- Custom CSS -->
     <style>
         :root {
