--- a/templates/admin/donation/demande_edit.html.twig
+++ b/templates/admin/donation/demande_edit.html.twig
@@ -32,6 +32,11 @@
                             {{ form_widget(form.statut) }}
                             {{ form_errors(form.statut) }}
                         </div>
+                        <div class="col-md-12">
+                            {{ form_label(form.quantiteDemandee) }}
+                            {{ form_widget(form.quantiteDemandee) }}
+                            {{ form_errors(form.quantiteDemandee) }}
+                        </div>
                     </div>
 
                     <div class="mt-4 pt-4 border-top">
